update wine dataset - dummy variables for new/old world wines

--- a/data_cleaning.Rmd
+++ b/data_cleaning.Rmd
@@ -33,17 +33,32 @@ Read in the wine data and generate year variable and save as csv file.
 wine_df = 
   read_csv(
   "./wine_data/winemag-data-130k-v2.csv") %>% 
-  select(-region_2, -taster_twitter_handle) %>% 
+  select(-region_2, -taster_twitter_handle, -X1) %>% 
   mutate(year = year_extract(title))
-
-
 ```
+
+##### Code new dummy variables for old/new world wine:
+
+The new-world and old-world wines are categorized mainly by the country of origin. The detailed introduction can be found at：https://winefolly.com/deep-dive/new-world-vs-old-world-wine/.
+
+```{r}
+old_world_country = c("France", "Italy", "Portugal", "Spain", "Germany", "Hungary", "Croatia", "England")
+
+new_world_country = c("US", "Canada", "Argentina", "Australia", "New Zealand", "South Africa", "China")
+
+wine_df = 
+  wine_df %>% 
+  mutate(new_world = country %in% new_world_country,
+         old_world = country %in% old_world_country)
+```
+
 
 Separate wine types by four major types: white, red, sparkling
 
 https://media.winefolly.com/Different-Types-of-Wine-v2.jpg
 
 # Subset data to four types of wine: red, white, sparkling, and rose.
+
 ```{r}
 wine_type = 
     read_xlsx(
@@ -75,6 +90,11 @@ rose_df =
   wine_df %>% 
     filter(!is.na(type),
            type == "rose")
+```
+
+
+
+```{r}
 write.csv(wine_df, file = "./wine_data/tidy/wine_all.csv")
 write.csv(red_df, file = "./wine_data/tidy/wine_red.csv")
 write.csv(white_df, file = "./wine_data/tidy/wine_white.csv")
@@ -84,6 +104,7 @@ write.csv(rose_df, file = "./wine_data/tidy/wine_rose.csv")
 
 
 Questions to address for data cleaning and following analysis 
+
 
 * how to deal w/ NA values in region
 
