--- a/mapping.Rmd
+++ b/mapping.Rmd
@@ -10,6 +10,9 @@ library(ggplot2)
 library(tigris)
 library(plotly)
 library(rgdal)
+library(maps)
+library(mapproj)
+library(RColorBrewer)
 ```
 
 Read in wine data.
@@ -55,7 +58,7 @@ wine_us_missing = wine_tidy_df %>%
    state = na_if(state, "America")
  )
 
-map(wine_us_missing, ~ sum(is.na(.)))
+purrr::map(wine_us_missing, ~ sum(is.na(.)))
 ```
 
 ### US Mapping Explanations:
@@ -96,7 +99,7 @@ wine_country_missing = wine_tidy_df %>%
  ) %>% 
   select(country, points, price)
 
-map(wine_country_missing, ~ sum(is.na(.)))
+purrr::map(wine_country_missing, ~ sum(is.na(.)))
 ```
 
 ### World Mapping Explanations:
@@ -125,7 +128,7 @@ states_merged_wine <- subset(states_merged_wine, !is.na(total))
 
 popup <- paste0(
   states_merged_wine$NAME,"<br>", 
-  "Wineries: ", states_merged_wine$total, "<br>", 
+  "Total Wines: ", states_merged_wine$total, "<br>", 
       "Avg Rating: ", states_merged_wine$avg_rating, "<br>",
       "Avg Price: $", states_merged_wine$avg_price,"<br>"
       )
@@ -143,7 +146,7 @@ state_map = states_merged_wine %>%
   addLegend(pal = mypal, 
             values = states_merged_wine$total, 
             position = "bottomright", 
-            title = "Wineries")
+            title = "Wines")
 ```
 
 ```{r state_map}
@@ -165,13 +168,13 @@ world_spdf %>%
 countries_merged_wine <- geo_join(world_spdf, wine_by_country, "NAME", "country")
 
 world_bins <- c(0,100,1000,10000,20000,30000,60000)
-world_pal <- colorBin(palette = "Reds", domain = countries_merged_wine$total, na.color = "transparent", bins = world_bins)
+world_pal <- colorBin(palette = "RdPu", domain = countries_merged_wine$total, na.color = "transparent", bins = world_bins)
 
 countries_merged_wine <- subset(countries_merged_wine, !is.na(total))
 
 world_popup <- paste0(
   countries_merged_wine$country,"<br>", 
-  "Wineries: ", countries_merged_wine$total, "<br>", 
+  "Wines: ", countries_merged_wine$total, "<br>", 
       "Avg Rating: ", countries_merged_wine$avg_rating, "<br>",
       "Avg Price: $", countries_merged_wine$avg_price,"<br>"
       )
@@ -193,9 +196,12 @@ world_map_labels = countries_merged_wine %>%
     smoothFactor = 0.2, 
     popup = ~world_popup,
     options = leafletOptions(pane = "polygons")) %>%
-  addLayersControl(baseGroups = "CartoDB.PositronNoLabels",
-                   overlayGroups = c("map labels",
-                                     "country"))
+  addLayersControl(overlayGroups = c("map labels",
+                                     "country")) %>% 
+  addLegend(pal = world_pal, 
+            values = countries_merged_wine$total, 
+            position = "bottomright", 
+            title = "Wines")
 ```
 
 ```{r world_maps}
@@ -204,12 +210,14 @@ world_map_labels
 
 
 ```{r static_map}
-world <- map_data("world") %>% left_join(avg_points_by_country, by = c("region" = "country"))
-ggplot(data = world, 
+world_static = map_data("world") %>%
+  left_join(wine_by_country, by = c("region" = "country"))
+
+ggplot(data = world_static, 
                mapping = aes(x = long, y = lat, group = group)) +
-  geom_polygon(aes(fill = mean)) +
-  scale_fill_continuous(low="rosybrown1", high="darkred", 
-                        na.value="snow2") +
+  geom_polygon(aes(fill = avg_rating)) +
+  scale_fill_continuous(low = "rosybrown1", high = "darkred", 
+                        na.value = "snow2") +
   coord_map(xlim = c(-180,180), ylim = c(-60, 80)) +
   theme(
     axis.title.x = element_blank(),
@@ -223,16 +231,8 @@ ggplot(data = world,
 
 #### Mapping Next Steps
 
-
-* Take screenshot of map/make static map
+* Take screenshot of maps?
 
 * Update about page and report for mapping
 
 * Review interactive - shiny lecture
-
-
-Potential Ideas: 
-
-* https://rstudio.github.io/leaflet/showhide.html
-
-Code adapted from https://www.r-graph-gallery.com/183-choropleth-map-with-leaflet.html
