--- a/plotly.Rmd
+++ b/plotly.Rmd
@@ -259,10 +259,11 @@ wine_df %>%
 ```
 
 
+<br><br>
 
 
-
-Get the winery which has the top average ratings wine. 
+# Which winery has the top average ratings wine? 
+Araujo in the US has the highest average rating of 98. Among the top 10 wineries, four of them are in the US and four of them are in the France.
 
 ```{r, message=FALSE, warning=FALSE}
 
@@ -277,9 +278,10 @@ wine_df %>%
 
 ```
 
-
+<br><br>
 
 # Differences of prices between new world and old world wine
+
 
 ```{r, message=FALSE, warning=FALSE}
 wine_df %>% 
@@ -289,6 +291,20 @@ wine_df %>%
   geom_boxplot() +
     labs(y = "Mean rating",
       x = "new vs old world wine")
+
+```
+<br><br>
+
+## Conduct a ANOVA test on rating vs wine type
+
+The results is insignificant which means that we can conclude that ratings for new world or old world wine are not different from the others. 
+
+```{r, message=FALSE, warning=FALSE}
+wine_new_old=
+wine_df %>% 
+  mutate(new_old = ifelse(new_world == 0, "old_world", "new_world"))
+t.test(price ~ new_old, data = wine_new_old)
+
 
 ```
 
@@ -306,5 +322,20 @@ wine_df %>%
       x = "new vs old world wine")
 
 ```
+
+<br><br>
+
+## Conduct a ANOVA test on price vs new/old world wine
+
+The results is significant which means that we can conclude that prices of new world or old world wine are significantly different from the others.
+
+```{r, message=FALSE, warning=FALSE}
+wine_price = 
+wine_df %>% 
+  mutate(new_old = ifelse(new_world == 0, "old_world", "new_world")) %>% 
+  filter(price<=100)
+t.test(price ~ new_old, data = wine_price)
+
+
 ```
 
