--- a/plotly.Rmd
+++ b/plotly.Rmd
@@ -66,7 +66,7 @@ It is interesting to see that red and sparking wine have similar distribution wi
 
 ## Conduct a ANOVA test on price vs wine type
 
-The results is significant which means that we can conclude that at least one wine type's price is differnet from the others.
+The results is significant which means that we can conclude that at least one wine type's price is different from the others.
 
 ```{r, message=FALSE, warning=FALSE}
 wine_price = 
@@ -137,7 +137,7 @@ wine_df %>%
 
 # Distribution of rating by region
 England has the highest average rating. Indis and Austria are the second and third highest.
-Even though Switzerland has the highest priced wine, the average ratings is only ranked at 11. Wine in Switzerlan is not very recommended. 
+Even though Switzerland has the highest priced wine, the average ratings is only ranked at 11. Wine in Switzerland is not very recommended. 
 
 ```{r, message=FALSE, warning=FALSE}
 y <- list(
@@ -295,7 +295,7 @@ wine_df %>%
 ```
 <br><br>
 
-## Conduct a ANOVA test on rating vs wine type
+## Conduct a t-test on rating vs wine type
 
 The results is insignificant which means that we can conclude that ratings for new world or old world wine are not different from the others. 
 
@@ -325,7 +325,7 @@ wine_df %>%
 
 <br><br>
 
-## Conduct a ANOVA test on price vs new/old world wine
+## Conduct a  t-test on price vs new/old world wine
 
 The results is significant which means that we can conclude that prices of new world or old world wine are significantly different from the others.
 
